Adding footer icons instead of text

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -71,6 +71,34 @@
       "content": "Social Media Icons"
     },
     {
+      "type": "text",
+      "id": "heading_text",
+      "label": "Heading Text",
+      "default": "Join our community",
+      "info": "Text displayed above the social media icons"
+    },
+    {
+      "type": "select",
+      "id": "heading_alignment",
+      "label": "Heading Alignment",
+      "options": [
+        {
+          "value": "center",
+          "label": "Center"
+        },
+        {
+          "value": "left",
+          "label": "Left"
+        },
+        {
+          "value": "right",
+          "label": "Right"
+        }
+      ],
+      "default": "center",
+      "info": "Alignment of the heading text"
+    },
+    {
       "type": "range",
       "id": "icon_size",
       "label": "Icon Size - Desktop (px)",
