--- a/snippets/footer-content.liquid
+++ b/snippets/footer-content.liquid
@@ -20,6 +20,8 @@
     assign icon_size_mobile = 32
     assign icon_gap = 16
     assign icon_alignment = 'center'
+    assign heading_text = 'Join our community'
+    assign heading_alignment = 'center'
   else
     assign footer_bg_color = footer_settings.footer_bg_color | default: '#EAE7E0'
     assign footer_text_color = footer_settings.footer_text_color | default: '#6B5B4F'
@@ -28,6 +30,8 @@
     assign icon_size_mobile = footer_settings.icon_size_mobile | default: 32
     assign icon_gap = footer_settings.icon_gap | default: 16
     assign icon_alignment = footer_settings.icon_alignment | default: 'center'
+    assign heading_text = footer_settings.heading_text | default: 'Join our community'
+    assign heading_alignment = footer_settings.heading_alignment | default: 'center'
   endif
 
   comment
@@ -53,11 +57,23 @@
 <footer style="background-color: {{ footer_bg_color }};
               padding: {{ footer_vertical_padding }}px 20px;
               display: flex;
+              flex-direction: column;
               align-items: center;
               justify-content: center;
               min-height: 100px;">
   
   {% if social_blocks_count > 0 %}
+    {% if heading_text != blank %}
+      <h3 class="footer-social-heading" 
+          style="color: {{ footer_text_color }};
+                 text-align: {{ heading_alignment }};
+                 margin: 0 0 20px 0;
+                 font-size: 1.5rem;
+                 font-weight: 600;">
+        {{ heading_text }}
+      </h3>
+    {% endif %}
+    
     <div class="social-icons-container" 
          style="display: flex;
                 gap: {{ icon_gap }}px;
